# tiles-tui-file-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit.md  flake.nix  install.sh  migrate_fields.py  migrate_fs_fields.py  note.md  tiles.desktop  todo.md
.dracon/: project-state.md
.github/workflows/: ci.yml
.ralph/: dead-code-cleanup.md  dead-code-cleanup.state.json  esc-button-fix.md  esc-button-fix.state.json  mouse-ux.md  mouse-ux.state.json  p1-test-coverage.md  p1-test-coverage.state.json  p4-bugfix.md  p4-bugfix.state.json  theme-audit-fix.md  theme-audit-fix.state.json  theme-overhaul.md  theme-overhaul.state.json  tiles-audit-loop.md  tiles-audit-loop.state.json  tiles-refactor.md  tiles-refactor.state.json  tiles-todo.md  tiles-todo.state.json  todo-audit-loop.md  todo-audit-loop.state.json
.sisyphus/plans/: sidebar-folder-tree-fixes.md
benches/: tiles_bench.rs
docs/: CPU_INVESTIGATION.md  LEFTOVER_TODO.md  SCORECARD.md  SCROLL_FIX.md  SCROLL_FIX_V2.md  THEME_AUDIT.md  THEME_TODO.md  TODO.md
docs/qa/: matrix.md
etc/: tiles-shell.bash  tiles-shell.fish  tiles-shell.zsh
plans/: 2026-05-12-tiles-comprehensive-review-v1.md
scripts/: build.sh
src/: app.rs  clipboard.rs  config.rs  event_helpers.rs  keybindings.rs  main.rs  nav_helpers.rs  servers.rs  setup.rs  term_graphics.rs  terminal.rs  tree_walk.rs  user_commands.rs
src/events/: editor.rs  editor_modals.rs  file_actions.rs  file_manager.rs  file_mouse.rs  git.rs  mod.rs  modal_mouse.rs  modals.rs  monitor.rs  mouse_helpers.rs  settings_handlers.rs
src/handlers/: event_loop_ctx.rs  mod.rs  refresh.rs
src/modules/: files.rs  mod.rs  remote.rs  rg.rs  system.rs  terminal.rs
src/state/: app_subtypes.rs  file_subtypes.rs  mod.rs
src/ui/: context_menu.rs  debug.rs  file_view.rs  footer.rs  git_page.rs  git_view.rs  header.rs  misc.rs  mod.rs  modals.rs  monitor.rs  pane.rs  settings.rs  small_modals.rs  sparkline.rs  theme.rs
src/ui/panes/: breadcrumbs.rs  editor.rs  sidebar.rs
tests/: smoke.rs
