[package]
name = "tiles-tui-file-manager"
version = "14.40.0"
description = "A dual-pane TUI file manager built in Rust. Features include vim-style navigation, integrated text editor, git awareness, remote SSH browsing, and system monitoring."
repository = "https://github.com/DraconDev/tiles"
license = "AGPL-3.0-only"
edition = "2021"

exclude = [
    "releases/**",
    ".dracon/**",
    "docs/**",
    "plan/**",
    ".sisyphus/**",
    "*.log",
    "clippy.log",
    "debug.log",
    "install.sh",
    "release.sh",
    "tiles.desktop",
    "tiles_icon.svg",
]


[[bin]]
name = "tiles"
path = "src/main.rs"

[dependencies]

color-eyre = "0.6.3"
base64 = "0.22.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
walkdir = "2.5.0"
dirs = "5.0.1"
chrono = "0.4.42"
ratatui = "0.29.0"

dracon-terminal-engine = "1.1"
dracon-files = "94.2"
dracon-git = "94.2"
dracon-system-lib = "94.2"

tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
toml = "0.9.11"
unicode-width = "0.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.24"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
trash = "5.2"
regex = "1"
fuzzy-matcher = "0.3.7"

[workspace]
